Check against output of bPermissions conversion and amend.
Reorder permissions to facilitate comparison and correct errors.

--- a/pve/nerdplot.yml
+++ b/pve/nerdplot.yml
@@ -11,6 +11,7 @@ permissions:
   - nerdplot.clean
   - nerdplot.create
   - nerdplot.createarea
+  - nerdplot.infoany
   - nerdplot.list
   - nerdplot.max
   - nerdplot.reload
