Reconcile changes on PvE 23.
Some modules have redundant permissions (listed in multiple groups
related by inheritance) as an attempted work-around of race condition
issues. They do no harm. They may or may not help. They are how PvE
is set up at the moment, and they can be removed later when ModMode
permission changes work better.

--- a/pve/bukkit.yml
+++ b/pve/bukkit.yml
@@ -16,13 +16,18 @@ permissions:
   - bukkit.command.whitelist.list
   - bukkit.command.whitelist.remove
   - minecraft.command.gamemode
+  - minecraft.command.give
   - minecraft.command.kill
   - minecraft.command.setblock
   - minecraft.command.summon
+  - minecraft.command.title
   - minecraft.command.weather
   - minecraft.command.whitelist
   - minecraft.command.worldborder
 
   TechAdmins:
   - bukkit.command.timings
-  
+  - minecraft.command.data
+  - minecraft.command.datapack
+  - minecraft.command.execute
+
