--- a/pve/nocheatplus.yml
+++ b/pve/nocheatplus.yml
@@ -1,10 +1,8 @@
 permissions:
   default:
-  # TODO: review.
   - nocheatplus.mods.rei.radar.player
   
   Moderators:
-  # TODO: review.
   - nocheatplus.admin.chatlog
   - nocheatplus.checks.chat.color
   - nocheatplus.checks.chat.commands
@@ -12,10 +10,18 @@ permissions:
   - nocheatplus.notify
   
   ModMode:
-  # TODO: review.
   - nocheatplus.checks.fight
   - nocheatplus.checks.moving
   - nocheatplus.checks.moving.runfly
+  - nocheatplus.command.notify
+  - nocheatplus.notify
 
   super:
   - nocheatplus.mods.rei.radar
+
+  TechAdmins:
+  - nocheatplus.admin
+
+  HeadAdmins:
+  - nocheatplus.filter.command.notify
+
