--- a/pve/worldedit.yml
+++ b/pve/worldedit.yml
@@ -1,23 +1,32 @@
 permissions:
   ModMode:
-  - worldedit.drain
-  - worldedit.extinguish
-  - worldedit.fixlava
-  - worldedit.fixwater
-  - worldedit.history.redo
-  - worldedit.history.undo
-  - worldedit.navigation.ascend
-  - worldedit.navigation.descend
   - worldedit.navigation.jumpto.command
   - worldedit.navigation.jumpto.tool
   - worldedit.navigation.thru.command
   - worldedit.navigation.thru.tool
   - worldedit.navigation.unstuck
-  - worldedit.navigation.up
-  - worldedit.remove
-  - worldedit.removenear
   - worldedit.selection.*
+  - worldedit.wand
 
   super:
   - worldedit.*
   - worldedit.brush.*
+  - worldedit.clipboard.*
+  - worldedit.clipboard.copy
+  - worldedit.clipboard.cut
+  - worldedit.clipboard.paste
+  - worldedit.clipboard.rotate
+  - worldedit.drain
+  - worldedit.extinguish
+  - worldedit.fixlava
+  - worldedit.fixwater
+  - worldedit.history.*
+  - worldedit.history.redo
+  - worldedit.history.undo
+  - worldedit.navigation.ascend
+  - worldedit.navigation.descend
+  - worldedit.navigation.up
+  - worldedit.region.stack
+  - worldedit.remove
+  - worldedit.removenear
+
